# python-glpi-api-hero

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: common_dbtm.md  computers.md  locations.md  sub-resources.md  ticket_dashboard.md  tickets.md  users-groups.md
examples/: amostra-pequena.json  amostra.json  default_usage.py  example.py  example_computer.py  example_dashboard.py  example_group.py  example_location.py  example_resume_dashboard.py  example_ticket.py  example_user.py
microservices/: consumer.py  producer.py  requirements.txt
src/GlpiApiHero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/PythonGlpiApiHero/models/: Computer.py  ITILSolution.py  Ticket.py  __init__.py
src/glpi_api_hero/: ITILFollowUp.py  Task.py  TicketValidation.py  User.py  __init__.py  actor.py  api_communication.py  cluster.py  common_dbtm.py  computer.py  exceptions.py  glpi_api.py  group.py  item.py  itilfollowup.py  itilsolution.py  linked_ticket.py  location.py  network_equipment.py  resume_dashboard.py  task.py  ticket.py  ticket_dashboard.py  ticket_validation.py  user.py
